--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "nextcloud-node-client": "^1.8.1",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0"
